[package]
name = "hello_rust_game"
version = "0.1.0"
authors = ["CaptainOachkatzl <dave.hofer@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_app = "0.5"
bevy_prototype_debug_lines = "0.3.3"
gfx-backend-dx12 = "0.9.1"
bevy_prototype_lyon = "0.3.1"